# speech-to-text-with-faster-whisper

./: README.md  pyproject.toml  whisper_utils.py
